[gd_scene load_steps=10 format=3 uid="uid://cuqkqsp3ikv5u"]

[ext_resource type="FontFile" uid="uid://c4mm3of2mc8o5" path="res://addons/phantom_camera/fonts/Nunito-Black.ttf" id="1_5e5k4"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/panel/updater/update_button.gd" id="1_xtaw5"]
[ext_resource type="Texture2D" uid="uid://d4j4hrb7yusyq" path="res://addons/phantom_camera/icons/phantom_camera_updater_panel_icon.svg" id="2_c4d83"]
[ext_resource type="PackedScene" uid="uid://b25fl4usw0nlp" path="res://addons/phantom_camera/panel/updater/download_update_panel.tscn" id="2_vtgcx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7fd1"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.0980392, 0.415686, 0.341176, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.227451, 0.72549, 0.603922, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y83dj"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.0784314, 0.109804, 0.129412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.960784, 0.960784, 0.960784, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_slf6e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lekqh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr4n4"]
content_margin_bottom = 20.0
bg_color = Color(0.0784314, 0.109804, 0.129412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.227451, 0.72549, 0.603922, 1)

[node name="UpdateButton" type="Button"]
visible = false
offset_left = 1.0
offset_right = 149.0
offset_bottom = 28.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_colors/font_hover_color = Color(0.939288, 0.917743, 0.892615, 1)
theme_override_colors/icon_normal_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_fonts/font = ExtResource("1_5e5k4")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_c7fd1")
theme_override_styles/hover = SubResource("StyleBoxFlat_y83dj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_slf6e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lekqh")
text = "Update available"
icon = ExtResource("2_c4d83")
script = ExtResource("1_xtaw5")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="DownloadDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
transparent_bg = true
title = "New Update"
initial_position = 2
size = Vector2i(450, 480)
transient = false
unresizable = true
borderless = true
keep_title_visible = false
content_scale_mode = 1
theme_override_constants/buttons_separation = 30
theme_override_styles/panel = SubResource("StyleBoxFlat_dr4n4")
ok_button_text = "Close"

[node name="DownloadUpdatePanel" parent="DownloadDialog" instance=ExtResource("2_vtgcx")]
unique_name_in_owner = true
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -80.0

[node name="NeedsReloadDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true

[node name="UpdateFailedDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
